# mpltablelayers

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md  mkdocs.yml  pyproject.toml
.claude/: settings.local.json
.github/ISSUE_TEMPLATE/: feature_request.md
.github/workflows/: lint.yml  publish.yml  test.yml
busdayaxis/: recipe.yaml
docs/: api.md  index.md
examples/: README.rst  plot_0_matplotlib_shading.py  plot_1_blume_shading.py  plot_2_plottable_shading.py  plot_3_life_calendar.py  plot_4_background.py  plot_5_foreground.py  plot_6_span_text.py  plot_7_latex_cell.py  plot_8_point_to_cell.py  plot_9_circle_cell.py  plot_hierarchical_header.py
src/mpltablelayers/: __init__.py  annotations.py  interceptor_registry.py  plottable_compat.py  table.py  utils.py
tests/: conftest.py  test_annotations.py  test_apply_properties.py  test_apply_property.py  test_header_spans.py  test_hierarchical_header.py  test_span_cell.py  test_utils.py
