[project]
name = "mpltablelayers"
dynamic = ["version"]
description = "Styled table layers for matplotlib"
keywords = ["matplotlib", "table", "matplotlib-table"]
classifiers = [
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Framework :: Matplotlib",
    "Operating System :: OS Independent",
]
readme = "README.md"
license = "BSD-3-Clause"
authors = [
    { name = "Simon Niederberger", email = "s.niederberger@hotmail.com" },
]
maintainers = [
    { name = "Simon Niederberger", email = "s.niederberger@hotmail.com" },
]
requires-python = ">=3.9"
dependencies = ["matplotlib", "numpy", "pandas"]

[project.urls]
Homepage = "https://saemeon.github.io/mpltablelayers/"
Repository = "https://github.com/saemeon/mpltablelayers"

[project.optional-dependencies]
test = ["pandas", "pytest", "pytest-cov"]
doc = [
    "mkdocs",
    "mkdocs-material",
    "mkdocs-gallery",
    "mkdocstrings[python]",
    "mike",
]
dev = [
    "ruff",
    "ty",
    "pandas",
    "prek",
    "pytest",
    "pytest-cov",
    "mkdocs",
    "mkdocs-material",
    "mkdocs-gallery",
    "mkdocstrings[python]",
    "mike",
]

[build-system]
requires = ["setuptools>=61.0", "wheel", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
write_to = "src/mpltablelayers/_version.py"
version_scheme = "post-release"
local_scheme = "no-local-version"

[tool.setuptools.dynamic]
version = { attr = "mpltablelayers._version.__version__" }

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=src/mpltablelayers --cov-report=term-missing"

[tool.ty.src]
include = ["src"]

[tool.ty.rules]
unresolved-import = "warn"

[tool.ruff]
line-length = 88
target-version = "py39"
exclude = ["src/mpltablelayers/_version.py"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E203"]

[tool.setuptools.packages.find]
where = ["src"]
